<resources>
    <string name="app_name">BattleShips</string>

    <string name="board_hits_title">frappes</string>
    <string name="board_ships_title">navires</string>
    <string name="board_ship_sunk_format" formatted="false">%s coulé</string>
    <string name="board_ship_hit_format" formatted="false">"%s : frappe en %c%d\n%s"</string>

    <string name="battleship_welcome">Bienvenue !\nVeuillez placer les navires.</string>
    <string name="north">Nord</string>
    <string name="south">Sud</string>
    <string name="east">Est</string>
    <string name="west">Ouest</string>
    <string name="title_activity_player_name">PlayerNameActivity</string>
    <string name="enter_name_label">Entrez votre nom</string>
    <string name="enter_name_hint">entrez votre nom</string>
    <string name="button_enter_name">Jouer!</string>
    <string name="put_ship_error">Impossible de placer le navire ici</string>
    <string name="win">Gagné</string>
</resources>
