<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.excilys.formation.battleships.android.ui.PutShipsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- La toolbar -->
            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/appbar_padding_top"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                </android.support.v7.widget.Toolbar>
            </android.support.design.widget.AppBarLayout>

            <!-- Le reste de l'ecran -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/appbar"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <!-- Le damier ou placer les navires -->
                <FrameLayout
                    android:id="@+id/putships_fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="300dip"
                    android:layout_alignParentTop="true" />

                <!-- La zone de texte avec le choix de l'orientation des navires -->
                <TextView
                    android:id="@+id/putship_instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/putships_fragment_container"
                    android:layout_centerHorizontal="true"

                    android:padding="10dp"
                    android:text="@string/battleship_welcome"

                    android:textAlignment="center"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/ship_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/putship_instruction"
                    android:layout_alignParentLeft="true"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/orientation_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/ship_name"
                    android:text="Orientation du navire :" />

                <RadioGroup
                    android:id="@+id/putship_radios_orientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/orientation_text"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_north"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/north" />

                    <RadioButton
                        android:id="@+id/radio_south"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/south" />

                    <RadioButton
                        android:id="@+id/radio_east"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/east" />

                    <RadioButton
                        android:id="@+id/radio_west"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/west" />
                </RadioGroup>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
